static/css/master.css
@import url('960.css');
@import url('datePicker.css');
* { font-family: Helvetica, Arial, sans-serif; }
body { background: #333; }
h1,h2,h3,h4,h5,h6 { color: #ccc; }
div.container_12 { background: url('/static/img/crime_face.jpg') black bottom left no-repeat; }
.clear_fix:after { content: "."; display: block; width: 100%; clear: both; visibility: hidden; height: 1px; }
.float_right { float: right; }
.align_right { text-align: right; }
h1#logo { 
    background: url('http://image.vmixcore.com/imgman.jpg?url=http://image.vmixcore.com/11/44/1/5103600/106/11/51/de964afad02d21d29b490d54a43636c8.jpg&width=400&height=72&fill=000000000');
    background-repeat: no-repeat; 
    text-indent: -9999em;
    height: 72px;
}
div#map { height: 400px; }
div.bubble_text { font-size: 85%; }
a img { border: 0; padding: 0 5px; }
a { color: #004276; text-decoration: none; 
    color: #88CBFE;}
a:hover { color: #d00; }
ul { list-style: none; }
ul li { margin: 10px 0px; }
p.view_all { text-align: center; padding-left: 10px; }
div.crime { padding: 10px; }
div.crime * { margin: 5px; }
div.row_odd { background: #eee; }
div.row_even { background: #333; }
div#date_filter { color: #ccc; background: #333; padding: 10px 0; margin-bottom: 10px; }
div#date_filter form ul { list-style-type: none; }
div#date_filter h4 { display: inline; padding: 0 10px; }
div#date_filter form ul li { display: inline; width: 10%; padding-right: 3%; }

/* AD STYLES */
div.small_ad, div.big_ad { padding: 15px; text-align: center; }
div.small_ad { width: 235px; display: inline; float: right; }
div.big_ad { width: 470px; }

